--- a/index.mdx
+++ b/index.mdx
@@ -38,7 +38,7 @@ export const HeroCard = ({ filename, title, description, href }) => {
 
   <div className="px-4 py-16 lg:py-48 lg:pb-24 max-w-3xl mx-auto">
     <h1 className="block text-4xl font-medium text-center text-gray-900 dark:text-zinc-50 tracking-tight">
-      Documentation
+      Documentation, now multilingual
     </h1>
 
     <div className="max-w-xl mx-auto px-4 mt-4 text-lg text-center text-gray-500 dark:text-zinc-500">
